--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ flake8 = "^7.1.2"
 mypy = "^1.15.0"
 black = "^25.1.0"
 isort = "^6.0.1"
+flake8-pyproject = "^1.2.3"
+flake8-bugbear = "^24.12.12"
+pytest = "^8.3.5"
 
 [build-system]
 requires = ["poetry-core"]
